fix: Add missing installation extra for evaluate_nlp

--- a/scenarios/evaluate/Supported_Evaluation_Metrics/NLP_Evaluators/NLP_Evaluators.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/NLP_Evaluators/NLP_Evaluators.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Install the packages\n",
-    "%pip install azure-ai-evaluation"
+    "%pip install azure-ai-evaluation[remote]"
    ]
   },
   {
