refactor: Move user input to a cell suitable to be used with papermill
    See https://papermill.readthedocs.io/en/latest/usage-parameterize.html

--- a/scenarios/evaluate/Simulators/Simulate_Adversarial_Data/Simulate_Adversarial.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Adversarial_Data/Simulate_Adversarial.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Adversarial Simulator for an online endpont\n",
     "\n",
@@ -74,27 +76,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
+    "# Use the following code to set the variables with your values.\n",
     "azure_ai_project = {\n",
     "    \"subscription_id\": \"<your-subscription-id>\",\n",
     "    \"resource_group_name\": \"<your-resource-group-name>\",\n",
     "    \"project_name\": \"<your-project-name>\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "azure_openai_api_version = \"<your-api-version>\"\n",
+    "azure_openai_deployment = \"<your-deployment>\"\n",
+    "azure_openai_endpoint = \"<your-endpoint>\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Use the following code to set the environment variables if not already set. If set, you can skip this step.\n",
-    "\n",
-    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"<api version>\"\n",
-    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"<your-deployment>\"\n",
-    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = \"<your-endpoint>\""
+    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = azure_openai_api_version\n",
+    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = azure_openai_endpoint"
    ]
   },
   {
@@ -143,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "simulator = AdversarialSimulator(azure_ai_project=azure_ai_project)"
@@ -194,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "outputs = await simulator(\n",
