--- a/scenarios/evaluate/Simulators/Simulate_Context-Relevant_Data/Simulate_From_Input_Text/Simulate_From_Input_Text.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Context-Relevant_Data/Simulate_From_Input_Text/Simulate_From_Input_Text.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Simulate Queries and Responses from input text"
    ]
@@ -82,43 +84,59 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Parameters\n",
     "\n",
-    "Lets initialize some variables. We need a way to connect to a LLM to use the notebook. This sample suggests a way to use `gpt-4o-mini` deployment in your Azure AI project. Replace the `azure_endpoint` with a link to your endpoint. If your applications calls `AzureOpenAI`'s chat completion endpoint, you will need to replace the values in `<>` with your `AzureOpenAI` deployment details. \n",
+    "Lets initialize some variables. We need a way to connect to a LLM to use the notebook. This sample suggests a way to use `gpt-4o-mini` deployment in your Azure AI project. Replace the `azure_openai_endpoint` with a link to your endpoint. If your applications calls `AzureOpenAI`'s chat completion endpoint, you will need to replace the values in `<>` with your `AzureOpenAI` deployment details. \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
-    "import os\n",
+    "# project details\n",
+    "azure_openai_api_version = \"<your-api-version>\"\n",
+    "azure_openai_endpoint = \"<your-endpoint>\"\n",
+    "azure_openai_deployment = \"gpt-4o-mini\"  # replace with your deployment name, if different\n",
     "\n",
-    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = \"<your-endpoint>\"\n",
-    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"<your-deployment>\"\n",
-    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"<api version>\""
+    "# Optionally set the azure_ai_project to upload the evaluation results to Azure AI Studio.\n",
+    "azure_ai_project = {\n",
+    "    \"subscription_id\": \"<your-subscription-id>\",\n",
+    "    \"resource_group\": \"<your-resource-group>\",\n",
+    "    \"workspace_name\": \"<your-workspace-name>\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# project details\n",
-    "azure_endpoint = \"https://<ai-hub>.openai.azure.com\"\n",
-    "azure_deployment = \"gpt-4o-mini\"  # replace with your deployment name, if different\n",
+    "import os\n",
     "\n",
-    "should_cleanup: bool = False"
+    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = azure_openai_endpoint\n",
+    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = azure_openai_api_version"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Connect to your project\n",
     "\n",
@@ -128,15 +146,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
     "\n",
     "model_config = {\n",
-    "    \"azure_endpoint\": azure_endpoint,\n",
-    "    \"azure_deployment\": azure_deployment,\n",
+    "    \"azure_endpoint\": azure_openai_endpoint,\n",
+    "    \"azure_deployment\": azure_openai_deployment,\n",
     "}\n",
     "\n",
     "# JSON mode supported model preferred to avoid errors ex. gpt-4o-mini, gpt-4o, gpt-4 (1106)"
@@ -409,7 +429,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Run evaluation\n",
     "`QAEvaluator` is a composite evaluator which runs GroundednessEvaluator, RelevanceEvaluator, CoherenceEvaluator, FluencyEvaluator, SimilarityEvaluator, F1ScoreEvaluator\n",
@@ -420,20 +442,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "azure_ai_project = {\n",
-    "    \"subscription_id\": \"<your-subscription-id>\",\n",
-    "    \"resource_group\": \"<your-resource-group>\",\n",
-    "    \"workspace_name\": \"<your-workspace-name>\",\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from azure.ai.evaluation import evaluate, QAEvaluator\n",
