--- a/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Quality/AI_Judge_Evaluators_Quality.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Quality/AI_Judge_Evaluators_Quality.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Evaluate using AI as Judge Quality Evaluators with Azure AI Evaluation SDK\n",
     "\n",
@@ -76,7 +78,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "\n",
     "Please provide Azure AI Project details so that traces and eval results are pushing in the project in Azure AI Studio."
@@ -85,33 +89,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "azure_ai_project = {\n",
-    "    \"subscription_id\": \"<subscription_id>\",\n",
-    "    \"resource_group_name\": \"<resource_group_name>\",\n",
-    "    \"project_name\": \"<project_name>\",\n",
-    "}"
+    "    \"subscription_id\": \"<your-subscription-id>\",\n",
+    "    \"resource_group_name\": \"<your-resource-group-name>\",\n",
+    "    \"project_name\": \"<your-project-name>\",\n",
+    "}\n",
+    "\n",
+    "azure_openai_api_version = \"<api version>\"\n",
+    "azure_openai_deployment = \"<your-deployment>\"\n",
+    "azure_openai_endpoint = \"<your-endpoint>\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "# Use the following code to set the environment variables if not already set. If set, you can skip this step. In addition, you should also set \"AZURE_OPENAI_ENDPOINT\" to the endpoint of your AzureOpenAI service.\n",
     "\n",
-    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"<openai_api_version>\"\n",
-    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"<openai_deployment>\""
+    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = azure_openai_api_version\n",
+    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = azure_openai_endpoint"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Data\n",
     "\n",
@@ -139,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -172,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pathlib\n",
