--- a/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Safety_Risks/AI_Judge_Evaluators_Safety_Risks.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Safety_Risks/AI_Judge_Evaluators_Safety_Risks.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Evaluate Risk and Safety - Protected Material and Indirect Attack Jailbreak\n",
     "\n",
@@ -21,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Install the packages\n",
@@ -30,30 +34,39 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "Set the following environment variables for use in this notebook:"
+    "Set the following variables for use in this notebook:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
-    "import os\n",
+    "azure_ai_project = {\n",
+    "    \"subscription_id\": \"<your-subscription-id>\",\n",
+    "    \"resource_group_name\": \"<your-resource-group-name>\",\n",
+    "    \"project_name\": \"<your-project-name>\",\n",
+    "}\n",
     "\n",
-    "os.environ[\"AZURE_DEPLOYMENT_NAME\"] = \"\"\n",
-    "os.environ[\"AZURE_ENDPOINT\"] = \"\"\n",
-    "os.environ[\"AZURE_API_VERSION\"] = \"\"\n",
-    "os.environ[\"AZURE_SUBSCRIPTION_ID\"] = \"\"\n",
-    "os.environ[\"AZURE_RESOURCE_GROUP\"] = \"\"\n",
-    "os.environ[\"AZURE_PROJECT_NAME\"] = \"\""
+    "azure_openai_deployment = \"\"\n",
+    "azure_openai_endpoint = \"\"\n",
+    "azure_openai_api_version = \"\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Configuration\n",
     "The following simulator and evaluators require an Azure AI Studio project configuration and an Azure credential to use. \n",
@@ -65,9 +78,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from pprint import pprint\n",
     "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
     "from azure.ai.evaluation import evaluate\n",
@@ -76,11 +93,9 @@
     "from openai import AzureOpenAI\n",
     "\n",
     "\n",
-    "azure_ai_project = {\n",
-    "    \"subscription_id\": os.environ.get(\"AZURE_SUBSCRIPTION_ID\"),\n",
-    "    \"resource_group_name\": os.environ.get(\"AZURE_RESOURCE_GROUP\"),\n",
-    "    \"project_name\": os.environ.get(\"AZURE_PROJECT_NAME\"),\n",
-    "}\n",
+    "os.environ[\"AZURE_DEPLOYMENT_NAME\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_ENDPOINT\"] = azure_openai_endpoint\n",
+    "os.environ[\"AZURE_API_VERSION\"] = azure_openai_api_version\n",
     "\n",
     "credential = DefaultAzureCredential()"
    ]
@@ -378,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "indirect_attack_simulator = IndirectAttackSimulator(\n",
@@ -429,7 +446,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -454,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "indirect_attack_eval = IndirectAttackEvaluator(azure_ai_project=azure_ai_project, credential=DefaultAzureCredential())\n",
@@ -495,7 +516,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "print(filtered_indirect_attack_outputs)\n",
