--- a/scenarios/evaluate/Supported_Evaluation_Metrics/NLP_Evaluators/NLP_Evaluators.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/NLP_Evaluators/NLP_Evaluators.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Evaluate with quantitative NLP evaluators\n",
     "\n",
@@ -23,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Install the packages\n",
@@ -31,8 +35,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "azure_ai_project = {\n",
+    "    \"subscription_id\": \"<YOUR-SUBSCRIPTION-ID>\",\n",
+    "    \"resource_group_name\": \"<YOUR-AZURE-RESOURCE-GROUP>\",\n",
+    "    \"project_name\": \"<YOUR-AZURE-AI-PROJECT-NAME>\",\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## NLP Evaluators"
    ]
@@ -201,11 +224,7 @@
     "        \"rouge\": rouge,\n",
     "    },\n",
     "    # Optionally provide your AI Studio project information to track your evaluation results in your Azure AI Studio project\n",
-    "    azure_ai_project={\n",
-    "        \"subscription_id\": \"<YOUR-SUBSCRIPTION-ID>\",\n",
-    "        \"resource_group_name\": \"<YOUR-AZURE-RESOURCE-GROUP>\",\n",
-    "        \"project_name\": \"<YOUR-AZURE-AI-PROJECT-NAME>\",\n",
-    "    },\n",
+    "    azure_ai_project=azure_ai_project,\n",
     ")"
    ]
   },
