--- a/scenarios/evaluate/Supported_Evaluation_Targets/Evaluate_App_Endpoint/Evaluate_App_Endpoint.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Targets/Evaluate_App_Endpoint/Evaluate_App_Endpoint.ipynb
@@ -59,7 +59,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "257fd898-7ef2-4d89-872e-da9e426aaf0b",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -67,7 +71,11 @@
     "\n",
     "from pprint import pprint\n",
     "from azure.ai.evaluation import evaluate\n",
-    "from azure.ai.evaluation import RelevanceEvaluator"
+    "from azure.ai.evaluation import RelevanceEvaluator\n",
+    "\n",
+    "azure_openai_api_version = \"<api version>\"\n",
+    "azure_openai_deployment = \"<your-deployment>\"\n",
+    "azure_openai_endpoint = \"<your-endpoint>\""
    ]
   },
   {
@@ -89,14 +97,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fbfc3a3b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Use the following code to set the environment variables if not already set. If set, you can skip this step.\n",
     "\n",
-    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"<api version>\"\n",
-    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"<your-deployment>\"\n",
-    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = \"<your-endpoint>\""
+    "os.environ[\"AZURE_OPENAI_API_VERSION\"] = azure_openai_api_version\n",
+    "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = azure_openai_endpoint"
    ]
   },
   {
