--- a/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Safety_Risks/AI_Judge_Evaluators_Safety_Risks.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Safety_Risks/AI_Judge_Evaluators_Safety_Risks.ipynb
@@ -557,7 +557,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv-azureai-samples",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
