--- a/scenarios/evaluate/Supported_Evaluation_Targets/Evaluate_App_Endpoint/Evaluate_App_Endpoint.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Targets/Evaluate_App_Endpoint/Evaluate_App_Endpoint.ipynb
@@ -242,7 +242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv-azureai-samples",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
