--- a/scenarios/evaluate/Simulators/Simulate_Adversarial_Data/Simulate_Adversarial.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Adversarial_Data/Simulate_Adversarial.ipynb
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "simulator = AdversarialSimulator(azure_ai_project=azure_ai_project)"
+    "simulator = AdversarialSimulator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)"
    ]
   },
   {
