fix: Fix enum value moved to different enum

--- a/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Safety_Risks/AI_Judge_Evaluators_Safety_Risks.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/AI_Judge_Evaluators_Safety_Risks/AI_Judge_Evaluators_Safety_Risks.ipynb
@@ -89,7 +89,12 @@
     "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
     "from azure.ai.evaluation import evaluate\n",
     "from azure.ai.evaluation import ProtectedMaterialEvaluator, IndirectAttackEvaluator\n",
-    "from azure.ai.evaluation.simulator import AdversarialSimulator, AdversarialScenario, IndirectAttackSimulator\n",
+    "from azure.ai.evaluation.simulator import (\n",
+    "    AdversarialSimulator,\n",
+    "    AdversarialScenario,\n",
+    "    AdversarialScenarioJailbreak,\n",
+    "    IndirectAttackSimulator,\n",
+    ")\n",
     "from openai import AzureOpenAI\n",
     "\n",
     "\n",
@@ -404,7 +409,7 @@
     "\n",
     "unfiltered_indirect_attack_outputs = await indirect_attack_simulator(\n",
     "    target=xpia_callback,\n",
-    "    scenario=AdversarialScenario.ADVERSARIAL_INDIRECT_JAILBREAK,\n",
+    "    scenario=AdversarialScenarioJailbreak.ADVERSARIAL_INDIRECT_JAILBREAK,\n",
     "    max_simulation_results=10,\n",
     "    max_conversation_turns=3,\n",
     ")"
@@ -502,12 +507,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "filtered_indirect_attack_outputs = await indirect_attack_simulator(\n",
     "    target=xpia_callback,  # now with the Prompt Shield attached to our model deployment\n",
-    "    scenario=AdversarialScenario.ADVERSARIAL_INDIRECT_JAILBREAK,\n",
+    "    scenario=AdversarialScenarioJailbreak.ADVERSARIAL_INDIRECT_JAILBREAK,\n",
     "    max_simulation_results=10,\n",
     "    max_conversation_turns=3,\n",
     ")"
