fix: Resolve broken call to Path.open

--- a/scenarios/evaluate/Simulators/Simulate_Adversarial_Data/Simulate_Adversarial.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Adversarial_Data/Simulate_Adversarial.ipynb
@@ -227,10 +227,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "with Path.open(\"outputs.jsonl\", \"w\") as f:\n",
+    "with Path(\"outputs.jsonl\").open(\"w\") as f:\n",
     "    f.write(outputs.to_eval_qr_json_lines())"
    ]
   }
