--- a/scenarios/evaluate/Supported_Evaluation_Metrics/NLP_Evaluators/NLP_Evaluators.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Metrics/NLP_Evaluators/NLP_Evaluators.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Install the packages\n",
-    "%pip install azure-ai-evaluation[remote]"
+    "%pip install azure-ai-evaluation"
    ]
   },
   {
