refactor: Move user input to a cell suitable to be used with papermill
    See https://papermill.readthedocs.io/en/latest/usage-parameterize.html

--- a/scenarios/evaluate/Image/image-evaluation.ipynb
+++ b/scenarios/evaluate/Image/image-evaluation.ipynb
@@ -51,47 +51,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "from pprint import pprint\n",
-    "from azure.ai.evaluation import ViolenceEvaluator, SexualEvaluator, SelfHarmEvaluator, HateUnfairnessEvaluator"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Project settings\n",
-    "\n",
-    "Make sure you fill these values accurately"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.environ[\"AZURE_SUBSCRIPTION_ID\"] = \"\"\n",
-    "os.environ[\"AZURE_RESOURCE_GROUP\"] = \"\"\n",
-    "os.environ[\"AZURE_PROJECT_NAME\"] = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from azure.ai.evaluation import ViolenceEvaluator, SexualEvaluator, SelfHarmEvaluator, HateUnfairnessEvaluator\n",
     "from azure.identity import DefaultAzureCredential\n",
     "\n",
-    "project_scope = {\n",
-    "    \"subscription_id\": os.environ.get(\"AZURE_SUBSCRIPTION_ID\"),\n",
-    "    \"resource_group_name\": os.environ.get(\"AZURE_RESOURCE_GROUP\"),\n",
-    "    \"project_name\": os.environ.get(\"AZURE_PROJECT_NAME\"),\n",
+    "azure_ai_project = {\n",
+    "    \"subscription_id\": \"<your-subscription-id>\",\n",
+    "    \"resource_group_name\": \"<your-resource-group>\",\n",
+    "    \"project_name\": \"<your-project-name>\",\n",
     "}"
    ]
   },
@@ -108,10 +82,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "violence_evaluator = ViolenceEvaluator(credential=DefaultAzureCredential(), azure_ai_project=project_scope)\n",
-    "sexual_evaluator = SexualEvaluator(credential=DefaultAzureCredential(), azure_ai_project=project_scope)\n",
-    "self_harm_evaluator = SelfHarmEvaluator(credential=DefaultAzureCredential(), azure_ai_project=project_scope)\n",
-    "hate_unfair_evaluator = HateUnfairnessEvaluator(credential=DefaultAzureCredential(), azure_ai_project=project_scope)\n",
+    "violence_evaluator = ViolenceEvaluator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)\n",
+    "sexual_evaluator = SexualEvaluator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)\n",
+    "self_harm_evaluator = SelfHarmEvaluator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)\n",
+    "hate_unfair_evaluator = HateUnfairnessEvaluator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)\n",
     "\n",
     "conversation = {\n",
     "    \"messages\": [\n",
@@ -168,7 +142,7 @@
     "from pprint import pprint\n",
     "from azure.ai.evaluation import ContentSafetyEvaluator\n",
     "\n",
-    "evaluator = ContentSafetyEvaluator(credential=DefaultAzureCredential(), azure_ai_project=project_scope)\n",
+    "evaluator = ContentSafetyEvaluator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)\n",
     "result = evaluator(conversation=conversation)\n",
     "pprint(result)"
    ]
@@ -189,7 +163,7 @@
     "from pprint import pprint\n",
     "from azure.ai.evaluation import ProtectedMaterialEvaluator\n",
     "\n",
-    "evaluator = ProtectedMaterialEvaluator(credential=DefaultAzureCredential(), azure_ai_project=project_scope)\n",
+    "evaluator = ProtectedMaterialEvaluator(credential=DefaultAzureCredential(), azure_ai_project=azure_ai_project)\n",
     "result = evaluator(conversation=conversation)\n",
     "pprint(result)"
    ]
@@ -214,11 +188,11 @@
     "\n",
     "from azure.ai.evaluation import evaluate\n",
     "\n",
-    "content_safety_eval = ContentSafetyEvaluator(azure_ai_project=project_scope, credential=DefaultAzureCredential())\n",
+    "content_safety_eval = ContentSafetyEvaluator(azure_ai_project=azure_ai_project, credential=DefaultAzureCredential())\n",
     "\n",
     "result = evaluate(\n",
     "    data=file_path,\n",
-    "    azure_ai_project=project_scope,\n",
+    "    azure_ai_project=azure_ai_project,\n",
     "    evaluators={\"content_safety\": content_safety_eval},\n",
     ")\n",
     "pprint(result)"
