--- a/scenarios/evaluate/Simulators/Simulate_Context-Relevant_Data/Simulate_From_Input_Text/Simulate_From_Input_Text.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Context-Relevant_Data/Simulate_From_Input_Text/Simulate_From_Input_Text.ipynb
@@ -157,6 +157,7 @@
     "model_config = {\n",
     "    \"azure_endpoint\": azure_openai_endpoint,\n",
     "    \"azure_deployment\": azure_openai_deployment,\n",
+    "    \"api_version\": azure_openai_api_version,\n",
     "}\n",
     "\n",
     "# JSON mode supported model preferred to avoid errors ex. gpt-4o-mini, gpt-4o, gpt-4 (1106)"
