--- a/scenarios/evaluate/Supported_Evaluation_Targets/Evaluate_On_Cloud/Evaluate_On_Cloud.ipynb
+++ b/scenarios/evaluate/Supported_Evaluation_Targets/Evaluate_On_Cloud/Evaluate_On_Cloud.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Cloud evaluation: Evaluating AI app data remotely in the cloud \n",
     "\n",
@@ -50,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from azure.ai.projects import AIProjectClient\n",
@@ -66,7 +70,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Configuration\n",
+    "\n",
+    "Set the following variables for use in this notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "azure_ai_connection_string = \"<your-connection-string>\"  # At the moment, it should be in the format \"<Region>.api.azureml.ms;<AzureSubscriptionId>;<ResourceGroup>;<HubName>\" Ex: eastus2.api.azureml.ms;xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxxxxx;rg-sample;sample-project-eastus2\n",
+    "azure_openai_deployment = \"<your-azure-openai-deployment>\"  # Your AOAI resource, you must use an AOAI GPT model\n",
+    "azure_openai_api_version = \"<your-azure-openai-api-version>\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Connect to your Azure Open AI deployment\n",
     "To evaluate your LLM-generated data remotely in the cloud, we must connect to your Azure Open AI deployment. This deployment must be a GPT model which supports `chat completion`, such as `gpt-4`. To see the proper value for `conn_str`, navigate to the connection string at the \"Project Overview\" page for your Azure AI project. "
@@ -75,26 +107,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "project_client = AIProjectClient.from_connection_string(\n",
     "    credential=DefaultAzureCredential(),\n",
-    "    conn_str=\"<connection_string>\",  # At the moment, it should be in the format \"<Region>.api.azureml.ms;<AzureSubscriptionId>;<ResourceGroup>;<HubName>\" Ex: eastus2.api.azureml.ms;xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxxxxx;rg-sample;sample-project-eastus2\n",
+    "    conn_str=azure_ai_connection_string,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Connect to your AOAI resource, you must use an AOAI GPT model\n",
-    "deployment_name = \"gpt-4\"\n",
-    "api_version = \"2024-06-01\"\n",
     "default_connection = project_client.connections.get_default(connection_type=ConnectionType.AZURE_OPEN_AI)\n",
-    "model_config = default_connection.to_evaluator_model_config(deployment_name=deployment_name, api_version=api_version)"
+    "model_config = default_connection.to_evaluator_model_config(\n",
+    "    deployment_name=azure_openai_deployment, api_version=azure_openai_api_version\n",
+    ")"
    ]
   },
   {
