--- a/scenarios/evaluate/Simulators/Simulate_Evaluate_ContentSafety/Simulate_Evaluate_ContentSafety.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Evaluate_ContentSafety/Simulate_Evaluate_ContentSafety.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Simulating and Evaluating Multiturn Conversations for Content Harms\n",
     "\n",
@@ -30,29 +32,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the following environment variables for use in this notebook:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.environ[\"AZURE_DEPLOYMENT_NAME\"] = \"\"\n",
-    "os.environ[\"AZURE_API_VERSION\"] = \"\"\n",
-    "os.environ[\"AZURE_SUBSCRIPTION_ID\"] = \"\"\n",
-    "os.environ[\"AZURE_RESOURCE_GROUP\"] = \"\"\n",
-    "os.environ[\"AZURE_PROJECT_NAME\"] = \"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Configuration\n",
     "The following simulator and evaluators require an Azure AI Studio project configuration and an Azure credential to use. \n",
@@ -62,25 +44,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Set the following variables for use in this notebook:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
-    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
-    "from azure.ai.evaluation import evaluate\n",
-    "from azure.ai.evaluation import ContentSafetyEvaluator\n",
-    "from azure.ai.evaluation.simulator import AdversarialSimulator, AdversarialScenario\n",
-    "from openai import AzureOpenAI\n",
-    "\n",
-    "\n",
     "azure_ai_project = {\n",
-    "    \"subscription_id\": os.environ.get(\"AZURE_SUBSCRIPTION_ID\"),\n",
-    "    \"resource_group_name\": os.environ.get(\"AZURE_RESOURCE_GROUP\"),\n",
-    "    \"project_name\": os.environ.get(\"AZURE_PROJECT_NAME\"),\n",
+    "    \"subscription_id\": \"<your-subscription-id>\",\n",
+    "    \"resource_group\": \"<your-resource-group>\",\n",
+    "    \"workspace_name\": \"<your-workspace-name>\",\n",
     "}\n",
     "\n",
-    "credential = DefaultAzureCredential()"
+    "\n",
+    "azure_openai_endpoint = \"<your-azure-openai-endpoint>\"\n",
+    "azure_openai_deployment = \"<your-deployment-name>\"\n",
+    "azure_openai_api_version = \"<your-deployment's-api-version>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"AZURE_DEPLOYMENT_NAME\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_API_VERSION\"] = azure_openai_api_version\n",
+    "os.environ[\"AZURE_ENDPOINT\"] = azure_openai_endpoint"
    ]
   },
   {
@@ -97,10 +103,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from typing import List, Dict, Optional\n",
+    "\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from azure.ai.evaluation import evaluate\n",
+    "from azure.ai.evaluation import ContentSafetyEvaluator\n",
+    "from azure.ai.evaluation.simulator import AdversarialSimulator, AdversarialScenario\n",
+    "from openai import AzureOpenAI\n",
+    "\n",
+    "credential = DefaultAzureCredential()\n",
     "\n",
     "\n",
     "async def content_safety_callback(\n",
