--- a/scenarios/evaluate/Simulators/Simulate_Evaluate_Groundedness/Simulate_Evaluate_Groundedness.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Evaluate_Groundedness/Simulate_Evaluate_Groundedness.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Evaluating Model Groundedness with Azure AI Evaluation SDK\n",
     "\n",
@@ -51,72 +53,73 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### Parameters and imports"
+    "### Configuration\n",
+    "\n",
+    "The following simulator and evaluators require an Azure AI Studio project configuration and an Azure credential to use. \n",
+    "Your project configuration will be what is used to log your evaluation results in your project after the evaluation run is finished.\n",
+    "\n",
+    "For full region supportability, see [our documentation](https://learn.microsoft.com/azure/ai-studio/how-to/develop/flow-evaluate-sdk#built-in-evaluators)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "Here we define the data, `grounding.json` on which we will simulate query and response pairs to help us evaluate the groundedness of our model's responses. Based on the use case of your model, the data you use to evaluate groundedness might differ. "
+    "Set the following variables for use in this notebook:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "azure_ai_project = {\n",
+    "    \"subscription_id\": \"<your-subscription-id>\",\n",
+    "    \"resource_group\": \"<your-resource-group>\",\n",
+    "    \"workspace_name\": \"<your-workspace-name>\",\n",
+    "}\n",
+    "\n",
+    "azure_openai_endpoint = \"<your-azure-openai-endpoint>\"\n",
+    "azure_openai_deployment = \"<your-azure-openai-deployment>\"\n",
+    "azure_openai_api_version = \"<your-azure-openai-deployment's-api-version>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "from typing import Any, Dict, List, Optional\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from azure.ai.evaluation import evaluate\n",
-    "from azure.ai.evaluation import GroundednessEvaluator\n",
-    "from azure.ai.evaluation.simulator import Simulator\n",
-    "from openai import AzureOpenAI\n",
-    "import importlib.resources as pkg_resources\n",
-    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ[\"AZURE_SUBSCRIPTION_ID\"] = \"<your-subscription-id>\"\n",
-    "os.environ[\"RESOURCE_GROUP\"] = \"<your-resource-group>\"\n",
-    "os.environ[\"PROJECT_NAME\"] = \"<your-project-name>\"\n",
-    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = \"<your-endpoint>\"\n",
-    "os.environ[\"AZURE_DEPLOYMENT_NAME\"] = \"<your-deployment-name>\"\n",
-    "os.environ[\"AZURE_API_VERSION\"] = \"<api-version>\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_scope = {\n",
-    "    \"subscription_id\": os.environ.get(\"AZURE_SUBSCRIPTION_ID\"),\n",
-    "    \"resource_group_name\": os.environ.get(\"RESOURCE_GROUP\"),\n",
-    "    \"project_name\": os.environ.get(\"PROJECT_NAME\"),\n",
-    "}\n",
     "\n",
     "model_config = {\n",
-    "    \"azure_endpoint\": os.environ.get(\"AZURE_OPENAI_ENDPOINT\"),\n",
-    "    \"azure_deployment\": os.environ.get(\"AZURE_DEPLOYMENT_NAME\"),\n",
-    "}"
+    "    \"azure_endpoint\": azure_openai_endpoint,\n",
+    "    \"azure_deployment\": azure_openai_deployment,\n",
+    "}\n",
+    "\n",
+    "os.environ[\"AZURE_OPENAI_ENDPOINT\"] = azure_openai_endpoint\n",
+    "os.environ[\"AZURE_DEPLOYMENT_NAME\"] = azure_openai_deployment\n",
+    "os.environ[\"AZURE_API_VERSION\"] = azure_openai_api_version"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Data\n",
     "Here we define the data, `grounding.json` on which we will simulate query and response pairs to help us evaluate the groundedness of our model's responses. Based on the use case of your model, the data you use to evaluate groundedness might differ. "
@@ -128,6 +131,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any, Dict, List, Optional\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from azure.ai.evaluation import evaluate\n",
+    "from azure.ai.evaluation import GroundednessEvaluator\n",
+    "from azure.ai.evaluation.simulator import Simulator\n",
+    "from openai import AzureOpenAI\n",
+    "import importlib.resources as pkg_resources\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "\n",
     "resource_name = \"grounding.json\"\n",
     "package = \"azure.ai.evaluation.simulator._data_sources\"\n",
     "conversation_turns = []\n",
@@ -236,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "custom_simulator = Simulator(model_config=model_config)"
@@ -288,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "groundedness_evaluator = GroundednessEvaluator(model_config=model_config)\n",
@@ -297,7 +315,7 @@
     "    evaluators={\n",
     "        \"groundedness\": groundedness_evaluator,\n",
     "    },\n",
-    "    azure_ai_project=project_scope,\n",
+    "    azure_ai_project=azure_ai_project,\n",
     ")\n",
     "print(eval_output)"
    ]
