fix: Fix broken invocations of Path.open

--- a/scenarios/evaluate/Image/image-evaluation.ipynb
+++ b/scenarios/evaluate/Image/image-evaluation.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "base64_image = \"\"\n",
     "\n",
-    "with Path.open(\"Image1.jpg\", \"rb\") as image_file:\n",
+    "with Path(\"image1.jpg\").open(\"rb\") as image_file:\n",
     "    base64_image = base64.b64encode(image_file.read()).decode(\"utf-8\")\n",
     "\n",
     "conversation = {\n",
