--- a/scenarios/evaluate/Simulators/Simulate_Evaluate_ContentSafety/Simulate_Evaluate_ContentSafety.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Evaluate_ContentSafety/Simulate_Evaluate_ContentSafety.ipynb
@@ -215,7 +215,7 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "with Path.open(\"adv_convo_eval.jsonl\", \"w\") as f:\n",
+    "with Path(\"adv_convo_eval.jsonl\").open(\"w\") as f:\n",
     "    for output in content_safety_outputs:\n",
     "        f.write(json.dumps({\"conversation\": output}))\n",
     "        f.write(\"\\n\")"
