--- a/scenarios/evaluate/Simulators/Simulate_Evaluate_Groundedness/Simulate_Evaluate_Groundedness.ipynb
+++ b/scenarios/evaluate/Simulators/Simulate_Evaluate_Groundedness/Simulate_Evaluate_Groundedness.ipynb
@@ -146,7 +146,7 @@
     "package = \"azure.ai.evaluation.simulator._data_sources\"\n",
     "conversation_turns = []\n",
     "\n",
-    "with pkg_resources.path(package, resource_name) as grounding_file, Path.open(grounding_file, \"r\") as file:\n",
+    "with pkg_resources.path(package, resource_name) as grounding_file, Path(grounding_file).open(\"r\") as file:\n",
     "    data = json.load(file)\n",
     "\n",
     "for item in data:\n",
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "output_file = \"ground_sim_output.jsonl\"\n",
-    "with Path.open(output_file, \"w\") as file:\n",
+    "with Path(output_file).open(\"w\") as file:\n",
     "    for output in outputs:\n",
     "        file.write(output.to_eval_qr_json_lines())"
    ]
