--- a/scenarios/evaluate/Image/image-evaluation.ipynb
+++ b/scenarios/evaluate/Image/image-evaluation.ipynb
@@ -236,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
